fix layout shift on related article images

--- a/styles.css
+++ b/styles.css
@@ -445,6 +445,7 @@ aside h2 {
 
 .aside-content .related-article img {
   width: 100%;
+  aspect-ratio: 1.25;
   border-radius: 4px;
   margin-inline: -4px;
   transition: all 0.2s;
